--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
     <a class="bouton_accueil" href="/adherer">Adhérer à l'association</a>
   </div>
 
-    <form class="mt-3" action="/login" method="post">
+    <form class="form_login mt-3" action="/login" method="post">
       <h1>Déja adhérent ?</h1>
       <p class="small text-center">Les champs marqués d'un <span>*</span> sont obligatoires.</p>
       <div class="form-group">
