--- a/views/adherer.ejs
+++ b/views/adherer.ejs
@@ -1,5 +1,5 @@
 <%- include('header') -%>
-  <main class="container">
+  <main class="container pb-3">
 Page Adhérer à l'association
   </main>
 <%- include('footer') -%>
