--- a/views/header.ejs
+++ b/views/header.ejs
@@ -52,11 +52,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/adherer">Adhérer à l'association</a>
           </li>
+
         </ul>
         <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Votre recherche" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
     </form>
+    <li class="nav-item">
+      <a href="/admin" class="nav-link"><i class="fa fa-cogs"></i></a>
+    </li>
       </div>
     </nav>
   </header>
