--- a/views/oubli-motdepasse.ejs
+++ b/views/oubli-motdepasse.ejs
@@ -1,5 +1,5 @@
 <%- include('header') -%>
-<main class="container">
+<main class="container pt-3 pb-3 align-items-center">
   <p>Page oubli mot de passe</p>
 </main>
 <%- include('footer') -%>
