--- a/views/qui-est-babeth.ejs
+++ b/views/qui-est-babeth.ejs
@@ -1,5 +1,5 @@
 <%- include('header') -%>
-<main class="container">
+<main class="container pt-3 pb-3 align-items-center">
   <p><strong>Merci Babeth !</strong> C’est l’histoire d’une habitante du quartier souhaitant dynamiser la vie de son cher et tendre quartier, le quartier Sainte-Elisabeth au Blosne. Le tout en privilégiant <strong>un mode de vie sain</strong> et un <strong>mode de consommation durable</strong> et éco-responsable.</p>
   <p>Prenant son courage à deux mains, elle agit et créée l’association Merci Babeth ! Son objectif principal est de faire partager au plus grand nombre sa passion pour les produits locaux et de saison. L’association soutient les <strong>producteurs locaux</strong> en s’approvisionnant majoritairement auprès de producteurs bretons mais aussi auprès de producteurs dans toute la France pour certains produits que nous ne trouvons pas dans notre chère et tendre Bretagne.</p>
 </main>
