--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,11 @@
         <p>Fleurs et plants</p></a>
       </article>
 
+      <article class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+        <a class="infobulle" href="/rayons/livres"><img src="img/vignette-fleurs.jpg" alt="livres" title="Photo by Secret Garden from Pexels">
+        <p>Livres</p></a>
+      </article>
+
     </div>
   </section>
 
